; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/spi/extr_gigadevice.c_gd5fxgq4xa_ooblayout_ecc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/spi/extr_gigadevice.c_gd5fxgq4xa_ooblayout_ecc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32 }
%struct.mtd_oob_region = type { i32, i32 }

@ERANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtd_info*, i32, %struct.mtd_oob_region*)* @gd5fxgq4xa_ooblayout_ecc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gd5fxgq4xa_ooblayout_ecc(%struct.mtd_info* %0, i32 %1, %struct.mtd_oob_region* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mtd_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.mtd_oob_region*, align 8
  store %struct.mtd_info* %0, %struct.mtd_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.mtd_oob_region* %2, %struct.mtd_oob_region** %7, align 8
  %8 = load i32, i32* %6, align 4
  %9 = icmp sgt i32 %8, 3
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i32, i32* @ERANGE, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %4, align 4
  br label %21

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = mul nsw i32 16, %14
  %16 = add nsw i32 %15, 8
  %17 = load %struct.mtd_oob_region*, %struct.mtd_oob_region** %7, align 8
  %18 = getelementptr inbounds %struct.mtd_oob_region, %struct.mtd_oob_region* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.mtd_oob_region*, %struct.mtd_oob_region** %7, align 8
  %20 = getelementptr inbounds %struct.mtd_oob_region, %struct.mtd_oob_region* %19, i32 0, i32 1
  store i32 8, i32* %20, align 4
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %13, %10
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
